Slack Feedback button overflow fix #22

--- a/client/src/DashBoard/Sidebar.scss
+++ b/client/src/DashBoard/Sidebar.scss
@@ -1,4 +1,25 @@
 
+/**
+ Slack Feedback CSS Override.
+*/
+
+// Slack Feedback Button Container
+.fprCaL {
+  margin: 0 !important;
+}
+
+// Slack Feedback Modal Container
+.eQeaZq {
+
+}
+
+// Slack Feedback Trigger Button 
+.hiaJXm {
+  overflow: hidden !important;
+  display: block !important;
+  text-overflow: ellipsis !important;
+}
+
 
 .sidebar-col{
   // .list-group-item{
